# job-service-template

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  cli.py  job_runner.py  main.py  models.py
test/integration/: test__docker_job_service.py
test/unit/: test__main__health.py  test__main__job.py
