[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "service-template"
version = "0.1.0"
requires-python = ">=3.10"
description = "Template service for enhancia-3"
authors = [
    {name = "Winston", email = "winston@example.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.38.0,<2.0.0",
    "ruff>=0.6.0",
    "pyright>=1.1.349",
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pyright]
exclude = [
    ".venv/**"
]

[pytest]
pythonpath = ["src"]
