[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "job-service-template"
version = "0.1.0"
requires-python = ">=3.10"
description = "Template service for enhancia-3"
authors = [
    {name = "Winston", email = "winston@example.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.38.0,<2.0.0",
    "ruff>=0.6.0",
    "ty>=0.0.1",
    "typer[all]>=0.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "xenon>=0.9.0",
    "vulture>=2.0",
]

[project.scripts]
job-service = "src.cli:app"

[tool.uv]
package = false

[tool.ty.src]
include = ["src", "test"]
exclude = [".venv"]

[tool.ty.rules]
all = "warn"

[pytest]
pythonpath = ["src"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]
severity = "high"
confidence = "high"

[tool.vulture]
exclude = ["test_*.py", "*_test.py", ".venv"]
ignore_names = ["visit_*", "do_*", "sig", "frame"]
min_confidence = 80
paths = ["src", "test"]
